--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bruba/node_chat_app.git"
+  },
+  "engines": {
+    "node": "8.9.1"
   },
   "author": "Brubiii",
   "license": "ISC",
@@ -18,6 +22,8 @@
   "homepage": "https://github.com/Bruba/node_chat_app#readme",
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "nodemon": "^1.14.3",
+    "socket.io": "^2.0.4"
   }
 }
