--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "moment": "^2.20.1",
     "nodemon": "^1.14.3",
     "socket.io": "^2.0.4"
   },
